--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_generative_ai: ^0.4.6
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
-  showcaseview: ^3.0.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
