--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.3.2
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
